# chatgpt-client

./: Cargo.toml
assets/: chatgpt-client.desktop
src/: main.rs
