[package]
name = "chatgpt-client"
version = "1.0.0"
description = "Aplicación para interactuar con ChatGPT en Linux"
edition = "2021"
license = "MIT"
authors = ["Howen Flores <developer@spacehowen.com>"]

[dependencies]
gtk = "0.18.2"
webkit2gtk = "2.0.1"

[package.metadata.deb]
maintainer = "Howen Flores <developer@spacehowen.com>"
depends = "libgtk-3-0"
assets = [
    ["target/release/chatgpt-client", "/usr/bin/chatgpt-client", "755"],
    ["assets/chatgpt-client.png", "/usr/share/icons/hicolor/256x256/apps/chatgpt-client.png", "644"],
    ["assets/chatgpt-client.desktop", "/usr/share/applications/chatgpt-client.desktop", "644"]
]